@@ -374,6 +374,8 @@ Version 1.5.2 - SVN
     search in fields other than first/last name (nickname, email)
   - Made performance improvements in security token handling
   - Improvements for PHP 5.4 compatibility.
+  - Added option that allows users to have replies to their own
+    messages sent to the recipient of the previous message (#3520988).
 
 Version 1.5.1 (branched on 2006-02-12)
 --------------------------------------
